# ansys-mcp-server

./: .gitignore  README.md  README.ru.md  README.zh.md  install.bat  install.sh  pyproject.toml  server.json
src/ansys_mcp_server/: __init__.py  server.py
